--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Tushar Patel</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1> Tushar Patel</h1>
+    <nav>
+
+    </nav>
 </body>
 </html>
