--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1> Tushar Patel</h1>
-    <nav>
 
+    <nav>
+        <ul>
+            <li class="navitem">
+                <a href="/">Home</a>
+            </li>
+            <li class="navitem">
+                <a href="/">Projects</a>
+            </li>
+    
+        </ul>
     </nav>
+
+    <h1> Tushar Patel</h1>
+    
 </body>
 </html>
