--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Tushar Patel</title>
+  <title>Projects</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -14,13 +14,12 @@
                 <a href="/">Home</a>
             </li>
             <li class="navitem">
-                <a href="/projects">Projects</a>
+                <a href="/">Projects</a>
             </li>
     
         </ul>
     </nav>
 
-    <h1> Tushar Patel</h1>
-    
+    <h1> Projects </h1>
 </body>
 </html>
