--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         </ul>
     </nav>
 
-    <h1> Tushar Patel</h1>
-    
+    <div>
+      <div class="left-container">
+        <h1> Tushar Patel </h1>
+        <p> I'm Tushar, an undergraduate at Yale studying Computer Science and Mathematics</p>
+      </div>
+      <div class="right-container">
+        <img src="">
+      </div>
+    </div>
 </body>
 </html>
