--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <div>
       <div class="left-container">
-        <h1> Tushar Patel </h1>
+        <h1 class="title"> Tushar Patel </h1>
         <p> I'm Tushar, an undergraduate at Yale studying Computer Science and Mathematics</p>
       </div>
       <div class="right-container">
-        <img src="">
+        <img src="/profile.jpeg">
       </div>
     </div>
 </body>
