--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
         </ul>
     </nav>
 
-    <div>
-      <div class="left-container">
+    <section class="main">
+      <aside class="left-container">
         <h1 class="title"> Tushar Patel </h1>
-        <p> I'm Tushar, an undergraduate at Yale studying Computer Science and Mathematics</p>
-      </div>
-      <div class="right-container">
+        <p> I'm Tushar, an undergraduate at Yale University studying Computer Science and Mathematics</p>
         <img src="/profile.jpeg">
-      </div>
-    </div>
+        
+      </aside>
+      <section class="right-container">
+        <div class="box">
+        <p>hi</p>
+        </div>
+      </section>
+    </section>
 </body>
 </html>
