--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
       </aside>
       <section class="right-container">
         <div class="box">
-        <p>hi</p>
+        <h3>About Me</h3>
+        <h3>Courses I've taken:</h3>
+          </ul>
+            <li>Artificial Intelligence </li>
+            <li>Data Structure and Techniques </li>
+            <li>Algorithms </li>
+            <li>Systems Engineering and Computer Architecture </li>
+            
+          </ul>
+            
         </div>
       </section>
     </section>
