--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="gap">
           <h1 class="title"> Tushar Patel </h1>
           <p> I'm Tushar, an undergraduate at Yale University studying Computer Science and Mathematics</p>
-          <img src="/profile.jpeg">
+          <img src="/img/profile.jpeg">
         </div>
         
       </aside>
