--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,15 @@
 
 
     <div class="grid-container">
-        <div class="grid-item">1</div>
+        <div class="grid-item">
+          <img src="/img/wordle.jpeg" class="grid-image">
+          <h4>Title</h4>
+          <p class = "description">
+            Description
+          </p>
+      
+        </div>
+      
         <div class="grid-item">2</div>
         <div class="grid-item">3</div>  
         <div class="grid-item">4</div>
