--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@
 
     <div class="grid-container">
         <div class="grid-item">
-          <img src="/img/wordle.jpeg" class="grid-image">
-          <h4>Title</h4>
+          <img src="https://www.adobe.com/content/dam/cc/default-meta-image.png" class="grid-image">
+          <h4>Wordle Bot</h4>
           <p class = "description">
-            Description
+            Algorithm I designed to play popular web-game "Wordle" by the New York Times. Created using Python
           </p>
       
         </div>
