--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <aside class="left-container">
         <div id="gap">
           <h1 class="title"> Tushar Patel </h1>
-          <p> I'm Tushar, an undergraduate at Yale University studying Computer Science and Mathematics</p>
+          <p>Hi! I'm Tushar, an undergraduate at Yale University studying Computer Science and Mathematics</p>
           <img src="/img/profile.jpeg" id="profile">
         </div>
         
