--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
                 <a href="/">Home</a>
             </li>
             <li class="navitem">
-                <a href="/">Projects</a>
+                <a href="/Projects">Projects</a>
             </li>
             <li class="navitem">
-              <iconify-icon icon="mdi:linkedin"></iconify-icon>
+              <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
+                <iconify-icon icon="mdi:linkedin" class="navitem"></iconify-icon>
+              </a>
+              
           </li>
     
         </ul>
