--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,14 @@
                 <a href="/">Home</a>
             </li>
             <li class="navitem">
-                <a href="/">Projects</a>
+                <a href="/Projects">Projects</a>
             </li>
+            <li class="navitem">
+              <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
+                <iconify-icon icon="mdi:linkedin" class="navitem"></iconify-icon>
+              </a>
+              
+          </li>
     
         </ul>
     </nav>
