--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
             <a href="/">Home</a>
         </li>
         <li class="navitem">
-            <a href="/Projects">Projects</a>
+            <a href="/projects">Projects</a>
         </li>
         <li class="navitem">
           <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
