--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Tushar Patel</title>
   <link rel="stylesheet" href="/style.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
 </head>
 <body>
 
