--- a/nav.html
+++ b/nav.html
@@ -4,11 +4,11 @@
             <a href="/">Home</a>
         </li>
         <li class="navitem">
-            <a href="/Projects">Projects</a>
+            <a href="/projects">Projects</a>
         </li>
         <li class="navitem">
           <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
-            <iconify-icon icon="mdi:linkedin" class="navitem"></iconify-icon>
+            <iconify-icon icon="mdi:linkedin"></iconify-icon>
           </a>
           
       </li>
