--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="https://www.linkedin.com/in/tushar-patel-76a85422a/" class="clickable">
                     <iconify-icon icon="mdi:linkedin" class="list-icon"></iconify-icon>
                 </a></li>
-            <li><a href="github.com/tpatel12" class="clickable">
+            <li><a href="https://github.com/tpatel12" class="clickable">
                 <iconify-icon icon="mdi:github" class="list-icon"></iconify-icon>
             </a></li>
             <li><a href="mailto:tusharspatel1@gmail.com" class="clickable">
