--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="/img/drinks.jpeg" class="grid-image">
+            <img src="/img/drinks.png" class="grid-image">
               <h4 class="description">Drink Recipe Finder</h4>
               <p class="description">
                 Web application I developed to recommend beverage recipes based on the items available in your kitchen. Uses Web API's and was created with C# / ASP.NET
