--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="grid-item">
-            <img src="/img/cars.png" class="grid-image">
+            <img src="/img/macros.jpeg" class="grid-image">
               <h4 class="description">C Macro Processor</h4>
               <p class="description">
                 A TeX-like macro processor that can process macros from multiple source files. Created using C.
