--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         </li>
         <li class="navitem">
           <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
-            <iconify-icon icon="mdi:linkedin"></iconify-icon>
+            <iconify-icon icon="mdi:linkedin" style="font-size: 28px"></iconify-icon>
           </a>
           
       </li>
