--- a/nav.html
+++ b/nav.html
@@ -6,9 +6,9 @@
         <li class="navitem">
             <a href="/projects">Projects</a>
         </li>
-        <li class="navitem">
-          <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/">
-            <iconify-icon icon="mdi:linkedin" style="font-size: 28px"></iconify-icon>
+        <li class="navitem" >
+          <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/" style="padding-top:10px; padding-bottom:20px">
+            <iconify-icon icon="mdi:linkedin" style="font-size: 38px"></iconify-icon>
           </a>
           
       </li>
