--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 
           <div class="grid-item">
             <img src="/img/cars.png" class="grid-image">
-              <h4 class="description">Wordle Bot</h4>
+              <h4 class="description">Self-Driving Cars</h4>
               <p class="description">
                 Computer vision program for object detection meant for self-driving cars. Created as my final project for Inspirit AI summer course, using convolutional neural networks to identify obstacles from image and video input. 
               </p>
