--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
         <h3>Outside of school, my hobbies include:</h3>
         <ul>
-            <li><img src="/img/travel.HEIC" style="width:50px">Travel</li>
+            <li><img src="/img/travel.jpeg" style="width:50px">Travel</li>
             <li>Skiing</li>
             <li>Volleyball</li>
             <li>Chess</li>
