--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         </script>
     
     <h1>Projects</h1>
-    <p>Here are a few examples of my projects and experience in computer science</p>
+    <p>Here are a few examples of my projects and experience in computer science:</p>
 
     <div class="grid-container">
         
