Additional robotics project

--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,14 @@
               </p>
           </div>
 
+          <div class="grid-item">
+            <img src="/img/macros.jpeg" class="grid-image">
+              <h4 class="description">FTC Robotics</h4>
+              <p class="description">
+                Captain of high school FTC robotics team, where I served on both the design team and programming team. Wrote autonomous and human-controlled code using Java. Qualified for World's competition in 2018, and awarded World FTC Rockwell Collins 2018 Innovate Award Finalist (out of 80,000 teams worldwide).
+              </p>
+          </div>
+
           
         
 
