--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <li>Artificial Intelligence </li>
         <li>Data Structure and Techniques </li>
         <li>Algorithms </li>
+        <li>Digital Systems </li>
         <li>Systems Engineering and Computer Architecture </li>
         <li>Discrete Math </li>
         <li>Real Analysis </li>
