--- a/nav.html
+++ b/nav.html
@@ -12,6 +12,12 @@
           </a>
           
       </li>
+      <li class="navitem" >
+        <a href="https://github.com/tpatel12" style="padding-top:10px; padding-bottom:20px">
+          <iconify-icon icon="mdi:github" style="font-size: 38px"></iconify-icon>
+        </a>
+        
+    </li>
 
     </ul>
 </nav>
