--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
             <a href="/">Home</a>
         </li>
         <li class="navitem">
-            <a href="/projects">Projects</a>
+            <b><a href="/projects">Projects</a></b>
         </li>
         <li class="navitem" >
           <a href="https://www.linkedin.com/in/tushar-patel-76a85422a/" style="padding-top:10px; padding-bottom:20px">
