--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li class="navitem">
-            <a href="/">Home</a>
+            <b><a href="/">Home</a></b>
         </li>
         <li class="navitem">
             <b><a href="/projects">Projects</a></b>
