--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,13 @@
               </p>
           </div>
 
+          <div class="grid-item">
+            <img src="/img/optiver.png" class="grid-image">
+              <h4 class="description">Optiver Ready Trader Go</h4>
+              <p class="description">
+                Competed in Ready Trader Go — a worldwide algoirthmic trading competition hosted by Optiver. Wrote multiple algorithms implementing a pairs trading strategy for futures and ETF's using Python.
+              </p>
+          </div>
           
 
           
