--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,14 @@
             </p>
             </div>
 
+          <div class="grid-item">
+            <img src="/img/prosperity.png" class="grid-image">
+              <h4 class="description">IMC Prosperity Trading Competition</h4>
+              <p class="description">
+                Prosperity Trading competition hosted by IMC Trading. Developed programs in Python to execute algorithmic trades in simulated markets for varied goods. Placed 89th out of approximately 8000 teams worldwide.
+              </p>
+          </div>
+
 
           <div class="grid-item">
             <img src="/img/drinks.png" class="grid-image">
