--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         
         <div class="grid-item">
             <img src="/img/whistler.jpeg" class="grid-image">
-              <h4 class="description">Ski Map Finder</h4>
+              <h4 class="description">Ski Map Route Generator</h4>
               <p class="description">
                 Python mapping tool that finds optimal route between any two points on a given ski resort. My program obtains data from OpenStreetMap API and finds fastest path using an A-star graph search algorithm.
               </p>
@@ -44,7 +44,7 @@
             <img src="/img/prosperity.png" class="grid-image">
               <h4 class="description">IMC Prosperity Trading Competition</h4>
               <p class="description">
-                Prosperity Trading competition hosted by IMC Trading. Developed programs in Python to execute algorithmic trades in simulated markets for varied goods. Placed 89th out of approximately 8000 teams worldwide.
+                Prosperity Trading competition hosted by IMC Trading. Developed Python algorithm to execute trades in simulated markets for varied goods, using strategies such as statistical arbitrage and pairs trading. Placed 89th out of 8000 teams worldwide.
               </p>
           </div>
 
