--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,14 @@
     <div class="grid-container">
         
         <div class="grid-item">
+          <img src="/img/hackathon.png" class="grid-image">
+            <h4 class="description">Point72 Cubist Hackathon</h4>
+            <p class="description">
+              placeholder
+            </p>
+        </div>
+        
+        <div class="grid-item">
             <img src="/img/whistler.jpeg" class="grid-image">
               <h4 class="description">Ski Map Route Generator</h4>
               <p class="description">
