hackathon project description

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
           <img src="/img/hackathon.png" class="grid-image">
             <h4 class="description">Point72 Cubist Hackathon</h4>
             <p class="description">
-              placeholder
+              Analyzed NYC public data sets on motor vehicle collisions, emergency response time, and medical facilities, using Python. Used these data sets to determine the optimal location for new ambulance stations in the city, as well as which current stations require additonal resource allocation. Placed first in hackathon, earning $2500 scholarship.
             </p>
         </div>
         
