--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,14 @@
                 Prosperity Trading competition hosted by IMC Trading. Developed Python algorithm to execute trades in simulated markets for varied goods, using strategies such as statistical arbitrage and pairs trading. Placed 89th out of 8000 teams worldwide.
               </p>
           </div>
-
+          
+          <div class="grid-item">
+            <img src="/img/hackathon.png" class="grid-image">
+              <h4 class="description">Anti-Spill Cup</h4>
+              <p class="description">
+                Arduino-controlled anti-spill cup, with a servo-powered lid. Uses IR distance sensor, gyroscope, and accelerometer to determine when user wants to drink from cup (opening lid) and when to close lid to prevent spillage.
+              </p>
+          </div>
 
           <div class="grid-item">
             <img src="/img/drinks.png" class="grid-image">
