anti-spill cup image

--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
           </div>
           
           <div class="grid-item">
-            <img src="/img/hackathon.png" class="grid-image">
+            <img src="/img/cup.jpg" class="grid-image">
               <h4 class="description">Anti-Spill Cup</h4>
               <p class="description">
                 Arduino-controlled anti-spill cup, with a servo-powered lid. Uses IR distance sensor, gyroscope, and accelerometer to determine when user wants to drink from cup (opening lid) and when to close lid to prevent spillage.
