--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <iconify-icon icon="mdi:email" class="list-icon"></iconify-icon>
 
             </a>
-            <p style="margin:0px; font-family: trebuchet MS">tusharspatel1@gmail.com</p></li>
+            <p style="margin:0px; font-size: min(2.5vw, 15px); font-family: trebuchet MS">tusharspatel1@gmail.com</p></li>
         </ul>   
 
         </div>
