Millennium internship added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3> My Work Experience </h3>
         
         <ul style="list-style:circle;">
-          <li>I am currently interning at Millennium Management, as a quantitive developer and quantitative researcher intern</li>
+          <li>I am currently interning at Millennium Management, as a Quantitive Developer & Quantitative Researcher Intern</li>
           <li>Last summer, I worked as a Software Development Intern at Magnetar Capital</li>
           <li>Before that, I was a Quality Analytics Research Intern at Rush Hospital </li>
           <li>At Yale, I volunteer at local middle schools as a computer science mentor (with Code Haven)</li>
